package decodex.modules;

import decodex.data.Data;

public class HexEncoder extends BaseModule {

    public HexEncoder() {
        super("hexencode", "description");
    }

    @Override
    public Data run(Data data) {
        return null;
    }
}
